# SentiRank

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.vps.yml  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  render.yaml  tailwind.config.ts  vercel.json
ml-service/: pyproject.toml
ml-service/app/: __init__.py  main.py
ml-service/notebooks/: 01_data_acquisition.ipynb  02_preprocessing.ipynb  03_indobert_sentiment_modeling.ipynb  03a_indobert_colab_training.ipynb  03b_indobert_weighted_loss_colab_training.ipynb  03c_indobert_weighted_loss_lr1e5_colab_training.ipynb  03d_indobert_weighted_loss_lr1e5_slang_colab_training.ipynb  04_svm_aspect_classification.ipynb  05_model_evaluation.ipynb  06_ahp_priority_ranking.ipynb  07_fuzzy_ahp_priority_ranking.ipynb  08_ranking_comparison_analysis.ipynb
ml-service/quality_audit/: preprocess_indobert_quality_summary.json  preprocessing_quality_summary.json  reviews_preprocessed_indobert_noise_report.csv  reviews_preprocessed_indobert_noise_report.json  reviews_preprocessed_svm_noise_report.csv  reviews_preprocessed_svm_noise_report.json  text_length_before_after_cleaning.csv  text_length_before_after_cleaning.json
ml-service/scripts/: aggregate_ahp_expert_judgement.py  aggregate_fuzzy_ahp_expert_judgement.py  calculate_ahp_from_expert_judgement.py  calculate_fuzzy_ahp_from_expert_judgement.py  compare_ahp_fuzzy_outputs.py  compare_rankings.py  derive_aspect_taxonomy.py  evaluate_models.py  generate_ahp_expert_templates.py  generate_ahp_ranking.py  train_svm.py  (+15 more)
(+509 files in other folders)
