[project]
name = "sentirank-ml-service"
version = "0.1.0"
description = "FastAPI ML service skeleton for the SentiRank research dashboard."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.1.0",
    "pandas>=2.3.0",
    "numpy>=2.3.0",
    "scikit-learn>=1.7.0",
    "joblib>=1.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
